--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <div class="col-md-1 hour">
             9AM
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
@@ -33,8 +32,7 @@
         <div class="col-md-1 hour">
             10AM
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
@@ -42,17 +40,15 @@
         <div class="col-md-1 hour">
             11AM
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div id="12Am" class="row time-block">
+      <div id="12Pm" class="row time-block">
         <div class="col-md-1 hour">
             12PM
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
@@ -60,8 +56,7 @@
         <div class="col-md-1 hour">
             1PM
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
@@ -69,8 +64,7 @@
         <div class="col-md-1 hour">
             2PM
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
@@ -78,8 +72,7 @@
         <div class="col-md-1 hour">
             3PM
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
@@ -87,8 +80,7 @@
         <div class="col-md-1 hour">
             4PM
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
@@ -96,8 +88,7 @@
         <div class="col-md-1 hour">
             5PM
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
