had changed some of the div id's not realizing time was based off military time. was causing the whole app to break, after changing the id's back app seems to be functioning properly.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
       <!-- Timeblocks go here -->
 
-      <div id="9Am" class="row time-block">
+      <div id="hour9AM" class="row time-block">
         <div class="col-md-1 hour">
             9AM
         </div>
@@ -28,7 +28,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div id="10Am" class="row time-block">
+      <div id="hour10AM" class="row time-block">
         <div class="col-md-1 hour">
             10AM
         </div>
@@ -36,7 +36,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div id="11Am" class="row time-block">
+      <div id="hour11AM" class="row time-block">
         <div class="col-md-1 hour">
             11AM
         </div>
@@ -44,7 +44,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div id="12Pm" class="row time-block">
+      <div id="hour12PM" class="row time-block">
         <div class="col-md-1 hour">
             12PM
         </div>
@@ -52,7 +52,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div id="1Pm" class="row time-block">
+      <div id="hour13PM" class="row time-block">
         <div class="col-md-1 hour">
             1PM
         </div>
@@ -60,7 +60,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div id="2Pm" class="row time-block">
+      <div id="hour14PM" class="row time-block">
         <div class="col-md-1 hour">
             2PM
         </div>
@@ -68,7 +68,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div id="3Pm" class="row time-block">
+      <div id="hour15PM" class="row time-block">
         <div class="col-md-1 hour">
             3PM
         </div>
@@ -76,7 +76,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div id="4Pm" class="row time-block">
+      <div id="hour16PM" class="row time-block">
         <div class="col-md-1 hour">
             4PM
         </div>
@@ -84,7 +84,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div id="5Pm" class="row time-block">
+      <div id="hour17PM" class="row time-block">
         <div class="col-md-1 hour">
             5PM
         </div>
